--- a/waleed.html
+++ b/waleed.html
@@ -6,6 +6,7 @@
     <meta name="twitter:" content="my frist project">
 
     <title> The frist page </title>
+    <link rel="stylesheet" href="waleed.css">
   </head>
   <page>
     <header>
@@ -14,12 +15,12 @@
   <body>
 <data value="26-2-2018">26/2/2018 </data>
   <main>
-    <article>
-      <section>
+    <article id="p1">
+      <section class="A">
         <p> my frist project </p>
 
       </section>
-      <section>
+      <section class="A">
         <p> <mark>iused html</mark> to create this page</p>
       </section>
       <section>
