--- a/waleed.html
+++ b/waleed.html
@@ -58,8 +58,8 @@
       <img src="210.jpg" alt="210">
 
     </aside>
-    <table style="width=100%">
-      <tr style="">
+    <table id="n1"style="width=100%">
+      <tr class="m1" style="">
         <td>تلاجات</td>
         <hr/>
         <td>غسلات</td>
@@ -97,7 +97,7 @@
 <address class=Q>
   Giza 6-october 400
 </address>
-
+<span>Waleed2022 @gmail.com</span>
   </body>
 </page>
 </html>
