--- a/waleed.html
+++ b/waleed.html
@@ -9,11 +9,41 @@
     <link rel="stylesheet" href="waleed.css">
   </head>
   <page>
-    <header>
-      <h1> details about my frist page </h1>
+  <div class="AB">
+
+    <header >
+
+      <ul id="B">
+    <h1> My Frist Page </h1>
+        <li><a href="https://www.tvquran.com">Home</a> </li>
+        <li> <a href="http://www.islamicnews.org.sa/page/public/default.aspx">News</a> </li>
+        <li> <a href="https://www.facebook.com/tvQuranOfficial/">Face</a> </li>
+      </ul>
+
+    <br/>
+
+      <div class="downlist">
+        <h3  id="bh">WaleedAbdo2022
+        <div class="dowenlistitem">
+          <ul>
+            <li> <a href="#"> Email</a> </li>
+            <li>  <a href="#">Github</a> </li>
+            <li> <a href="#">Linkin </a></li>
+
+          </ul>
+
+        </div>
+        </h3>
+
+      </div>
     </header>
+    </div>
+    <div class="BA">
+
+
   <body>
-<data value="26-2-2018">26/2/2018 </data>
+
+<data  value="26-2-2018">26/2/2018 </data>
   <main>
     <article id="p1">
       <section class="A">
@@ -38,11 +68,12 @@
           </ul>
         </nav>
       </section>
+
       <section>
         <blockquote cite="https://books.google.com.eg/books?hl=ar&lr=&id=Dq9L3KkDOFIC&oi=fnd&pg=PA13&dq=paragraph+about+html&ots=3AkXSBB-JL&sig=luTvuJqbFSw7QHu2g7MzHTy5RXE&redir_esc=y#v=onepage&q=paragraph%20about%20html&f=false">
 
 
-        <p>g Your Web Page 60 Creating the Foundation 62 Declaring the Encoding
+        <p id="W">g Your Web Page 60 Creating the Foundation 62 Declaring the Encoding
 63 Creating a Title 64 Creating Section Headers 65 Starting a New Paragraph 66 Naming …</p>
 <footer>waleem </footer>
 </blockquote>
@@ -99,5 +130,6 @@
 </address>
 <span>Waleed2022 @gmail.com</span>
   </body>
+    </div>
 </page>
 </html>
