--- a/waleed.html
+++ b/waleed.html
@@ -6,7 +6,8 @@
     <meta name="twitter:" content="my frist project">
 
     <title> The frist page </title>
-    <link rel="stylesheet" href="waleed.css">
+      <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/waleed.css">
   </head>
   <page>
   <div class="AB">
@@ -42,7 +43,10 @@
 
 
   <body>
+<script src="js/jq.js">
+<script src="js/bootstrap.min.js">
 
+</script>
 <data  value="26-2-2018">26/2/2018 </data>
   <main>
     <article id="p1">
