--- a/FirstProject.html
+++ b/FirstProject.html
@@ -10,36 +10,67 @@
     <title></title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/waleed.css">
+  <link rel="stylesheet" href="css/project.css">
   <!--DEFINATION TO edge-->
   <script src="js/html5shiv.min.js"></script>
     <script src="js/respond.min.js"></script>
   </head>
   <body>
+    <div class="AB">
 
-    <div class="container">
+
+<header class="bgimage">
+  <div class="container">
+    <h1>Ideal Zanussi</h1>
+  </div>
+
+</header>
+</div>
+<div class="BA">
+
+
+    <div class="container items">
       <div class="row">
-<div class="col-lg-3 col-md-6 col-sm-8 col-xs-3">
-   waleedA jddjfhkdlkfkhngofbgifdkbfgf
+<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+   <img src="image\download (3).jpg" alt="imge"class="img-circle myimg" width="150px" height="40px">
+   <h3>نلاجة ايديال 20قدم</h3>
+   <p>  تلاجة بلازمة مزوده ب كنفرتر</p>
       </div>
-      <div class="col-lg-3 col-md-6 col-sm-8 col-xs-3">
-         waleedA jddjfhkdlkfkhngofbgifdkbfgf
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+         <img src="image\0a8896a96bac27152dfdb7c939659610.jpg" alt="imge"class="img-circle myimg" width="150px" height="40px">
+<h3>غسالة 7كيلو دجيتال</h3>
+<p>غسالة دجيتال 7كيلو مزوده ب كنفرن</p>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-8 col-xs-3">
-               waleedA jddjfhkdlkfkhngofbgifdkbfgf
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+               <img src="image\ovens_spaceandlocation_2000x1125.jpg" alt="imge"class="img-circle myimg" width="150px" height="40px">
+               <h3>بوتجاز 8 شعلة</h3>
+               <p>بوتجاز8شعلة اشعال ذاتى</p>
                   </div>
-                  <div class="col-lg-3 col-md-6 col-sm-8 col-xs-3">
-                     waleedA jddjfhkdlkfkhngofbgifdkbfgf
+                    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                       <img src="image\slide-5-copy-640x300.jpg" alt="imge"class="img-circle myimg" width="150px" height="40px">
+                       <h3>مكيف 1.5حصان</h3>
+                       <p>مكيف 1.5 بلازمة ابيض</p>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-8 col-xs-3">
-                           waleedA jddjfhkdlkfkhngofbgifdkbfgf
+                          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                           <img src="image\اسعار-غسالات-ألاطباق-مصر-2015.jpg" alt="imge"class="img-circle myimg" width="150px" height="40px">
+                           <h3>غسالة اطباق</h3>
+                           <p>غسالة اطباق متعددت المراحل </p>
                               </div>
-      <div class="col-lg-3 col-md-6 col-sm-8 col-xs-3">
-      waleedA jddjfhkdlkfkhngofbgifdkbfgf
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+       <img src="image\vertical-freezer-270-liter-no-frost-digital-control-close.jpg" alt="imge"class="img-circle myimg" width="150px" height="40px">
+       <h3>ديب فريزر 5درج</h3>
+       <p>ديب فريزر 5درج دفرست </p>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
-       waleedA jddjfhkdlkfkhngofbgifdkbfgf
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+           <img src="image\item_XL_7795588_6760482.jpg" alt="imge"class="img-circle myimg" width="150px" height="40px">
+           <h3>سخان كهرباء60لتر</h3>
+           <p>سخان كهرباء موفر للكهرباء </p>
           </div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                 <img src="image\10014708_695115733863939_8657984236022658837_n.png" alt="imge"class="img-circle myimg" width="150px" height="40px">
+                 <h3>مكنسة كهرباء 1200وات</h3>
+                 <p>مكنسة قوة في شفط الاتربه </p>
+                </div>
       </div>
 
     </div>
@@ -47,6 +78,6 @@
     <script src="js/jq.js"></script>
     <script src="js/bootstrap.min.js">  </script>
 
-
+</div>
   </body>
 </html>
