--- a/FirstProject.html
+++ b/FirstProject.html
@@ -21,13 +21,62 @@
 
 <header class="bgimage">
   <div class="container">
-    <h1>Ideal Zanussi</h1>
+    <h1></h1>
   </div>
 
 </header>
 </div>
 <div class="BA">
 
+  <div class="container">
+<!--  <h2>Carousel Example</h2> -->
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+    <li data-target="#myCarousel" data-slide-to="4"></li>
+    <li data-target="#myCarousel" data-slide-to="5"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item">
+      <img src="image\25398881_1809941255714709_3542658661279081818_n.jpg" alt="New york" style="width:100%;">
+    </div>
+    <div class="item active">
+      <img src="image\images.jpg1.jpg" alt="Los Angeles" style="width:100%;">
+    </div>
+
+    <div class="item">
+      <img src="image\EG_FR.png" alt="Chicago" style="width:100%;">
+    </div>
+
+
+    <div class="item">
+      <img src="image\EG_OVEN.png" alt="New york" style="width:100%;">
+    </div>
+    <div class="item">
+      <img src="image\10014708_695115733863939_8657984236022658837_n.png" alt="New york" style="width:100%;">
+    </div>
+    <div class="item">
+      <img src="image\EG_WA-ar-768x300.png" alt="New york" style="width:100%;">
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
 
     <div class="container items">
       <div class="row">
@@ -62,7 +111,7 @@
        <p>ديب فريزر 5درج دفرست </p>
     </div>
       <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-           <img src="image\item_XL_7795588_6760482.jpg" alt="imge"class="img-circle myimg" width="150px" height="40px">
+           <img  src="image\item_XL_7795588_6760482.jpg" alt="imge"class="img-circle myimg" width="150px" height="40px">
            <h3>سخان كهرباء60لتر</h3>
            <p>سخان كهرباء موفر للكهرباء </p>
           </div>
@@ -73,7 +122,19 @@
                 </div>
       </div>
 
+    </div >
+    <div class="was">
+
+
+    <footer>  call -> 19999
+    </br>
+
+      <a href="https://www.zanussi.com.eg/ar-eg/support/service-information/">Email</a>
+  <a href="https://www.zanussi.com.eg/ar-eg/support3/">الدعم الفنى </a>  </footer>
     </div>
+
+  </div>
+
        <!-- Optional JavaScript -->
     <script src="js/jq.js"></script>
     <script src="js/bootstrap.min.js">  </script>
